--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "next": "^9.2.2",
+    "nextjs-fonts": "^0.22.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "prop-types": "^15.7.2",
-    "styled-components": "^5.0.1",
-    "nextjs-fonts": "^0.22.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
