--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "next": "^9.2.2",
     "nextjs-fonts": "^0.22.0",
@@ -37,7 +38,7 @@
     "prettier": "^1.19.1"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 4200",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
