--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "filepond": "^4.13.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.6.1",
     "firebase": "^7.12.0",
     "immer": "^6.0.1",
     "next": "^9.2.2",
@@ -18,12 +21,14 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "rxfire": "^3.10.1",
     "rxjs": "^6.5.4",
+    "shortid": "^2.2.15",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
