--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.13.0",
     "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
+    "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
