--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.13.0",
     "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
+    "react-motion": "^0.5.2",
     "react-rater": "^5.1.1",
     "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.2.0",
