--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "rxfire": "^3.10.1",
     "rxjs": "^6.5.4",
     "shortid": "^2.2.15",
