--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "filepond": "^4.13.0",
+    "filepond-plugin-file-validate-type": "^1.2.5",
+    "filepond-plugin-image-crop": "^2.0.3",
+    "filepond-plugin-image-edit": "^1.6.0",
     "filepond-plugin-image-exif-orientation": "^1.0.6",
     "filepond-plugin-image-preview": "^4.6.1",
+    "filepond-plugin-image-resize": "^2.0.4",
+    "filepond-plugin-image-transform": "^3.7.2",
     "firebase": "^7.12.0",
     "immer": "^6.0.1",
+    "moment": "^2.24.0",
     "next": "^9.2.2",
     "next-redux-wrapper": "^5.0.0",
     "nextjs-fonts": "^0.22.0",
