--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-share": "^4.1.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "rxfire": "^3.10.1",
