--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
     "react-iframe": "^1.8.0",
+    "react-instagram-embed": "^1.5.0",
     "react-modal": "^3.11.2",
     "react-motion": "^0.5.2",
     "react-rater": "^5.1.1",
