--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
     "react-iframe": "^1.8.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-instagram-embed": "^1.5.0",
     "react-modal": "^3.11.2",
     "react-motion": "^0.5.2",
@@ -37,6 +38,8 @@
     "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "react-scroll-progress-bar": "^1.1.12",
     "react-share": "^4.1.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
