--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-facebook": "^8.1.4",
     "react-filepond": "^7.0.1",
     "react-icons": "^3.9.0",
     "react-iframe": "^1.8.0",
