--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "emotion": "^10.0.27",
     "filepond": "^4.13.0",
     "filepond-plugin-file-validate-type": "^1.2.5",
     "filepond-plugin-image-crop": "^2.0.3",
@@ -19,6 +20,7 @@
     "filepond-plugin-image-transform": "^3.7.2",
     "firebase": "^7.12.0",
     "immer": "^6.0.1",
+    "is-hotkey": "^0.1.6",
     "moment": "^2.24.0",
     "next": "^9.2.2",
     "next-redux-wrapper": "^5.0.0",
@@ -46,6 +48,9 @@
     "rxfire": "^3.10.1",
     "rxjs": "^6.5.4",
     "shortid": "^2.2.15",
+    "slate": "^0.58.3",
+    "slate-history": "^0.58.3",
+    "slate-react": "^0.58.3",
     "styled-components": "^5.0.1",
     "tailwindcss": "^1.2.0"
   },
