--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^7.12.0",
     "immer": "^6.0.1",
     "is-hotkey": "^0.1.6",
+    "is-url": "^1.2.4",
     "moment": "^2.24.0",
     "next": "^9.2.2",
     "next-redux-wrapper": "^5.0.0",
