--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "filepond-plugin-image-resize": "^2.0.4",
     "filepond-plugin-image-transform": "^3.7.2",
     "firebase": "^7.12.0",
+    "image-extensions": "^1.1.0",
     "immer": "^6.0.1",
     "is-hotkey": "^0.1.6",
     "is-url": "^1.2.4",
