--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.0",
     "react-facebook": "^8.1.4",
     "react-filepond": "^7.0.1",
