--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "filepond": "^4.13.0",
