--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "dompurify": "^2.0.12",
     "dotenv": "^8.2.0",
     "filepond": "^4.13.0",
     "filepond-plugin-file-validate-type": "^1.2.5",
@@ -20,6 +19,7 @@
     "filepond-plugin-image-transform": "^3.7.2",
     "firebase": "^7.12.0",
     "immer": "^6.0.1",
+    "isomorphic-dompurify": "^0.5.0",
     "moment": "^2.24.0",
     "next": "^9.2.2",
     "next-redux-wrapper": "^5.0.0",
